# pymmWave

./: .gitlab-ci.yml  IWR6843AOP.py  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
dev/: __main__.py  config.py
parsing/area_scanner/: area_scanner_parser.py
parsing/out_of_box/: out_of_box_parser.py
src/pymmWave/: IWR6843AOP.py  __init__.py  sensor.py  utils.py
src/pymmWave/parsing/: __init__.py  sensor_parser.py
src/pymmWave/parsing/area_scanner/: area_scanner_parser.py  models.py
tests/: test_utils.py
