[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymmWave"
version = "1.4.1"
description = "A TI mmWave RADAR EVM integration library."
readme = "README.md"
requires-python = ">=3.11.1"
license = { file = "LICENSE" }
authors = [
    { name = "Julian Dühnen", email = "julianduehnen@gmail.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "pyserial>=3.5"
]

[project.urls]
Homepage = "https://gitlab.utwente.nl/dp-6/pymmwave"

[tool.setuptools]
py-modules = ["pymmWave"]
include-package-data = true